--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {
+  .link-cabecalho {
+    @apply block xl:my-5 sm:p-2 md:p-5 hover:bg-amber-400 transition-all duration-500 ease-out;
+  }
+}
